--- a/.github/workflows/docker-publish-windows.yml
+++ b/.github/workflows/docker-publish-windows.yml
@@ -16,7 +16,7 @@ jobs:
         - os: windows-2019
           file: Dockerfile.windows
           tag: ltsc2019
-          base: 4.8.1-windowsservercore-ltsc2019
+          base: ltsc2019
     permissions:
       contents: read
       packages: write
