--- a/.github/workflows/docker-publish-windows2022.yml
+++ b/.github/workflows/docker-publish-windows2022.yml
@@ -11,12 +11,12 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        os: [windows-2019]
+        os: [windows-2022]
         include:
-        - os: windows-2019
+        - os: windows-2022
           file: Dockerfile.windows
-          tag: ltsc2019
-          base: 4.8-windowsservercore-ltsc2019
+          tag: ltsc2022
+          base: ltsc2022
     permissions:
       contents: read
       packages: write
@@ -32,9 +32,8 @@ jobs:
     - name: Build Docker image
       run: |
         docker build . --pull --tag ${{ env.REGISTRY }}/${{ github.repository }}:${{ matrix.tag }} --build-arg BASE=${{ matrix.base }} --build-arg ARIAL_TTF_URL=${{ secrets.ARIAL_TTF_URL }}
-      working-directory: windows
+      working-directory: windows2022
     - name: Push Docker image
-      if: ${{ github.event_name != 'pull_request' }}
       run: |
         docker push ${{ env.REGISTRY }}/${{ github.repository }}:${{ matrix.tag }}
-      working-directory: windows
+      working-directory: windows2022
